<resources>
    <string name="app_name">OMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_createorder">Create Order</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="menu_OrderCollection">Order Collection</string>
    <string name="menu_noorder">No Order</string>
    <string name="menu_customerlist">Customer List</string>
    <string name="menu_productlist">Product List</string>
    <string name="menu_orderstatus">Order Status</string>
    <string name="menu_sentitem">Sent Item</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_datasync">Data Sync</string>
    <string name="menu_quit">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_changepassword">Change Password</string>
</resources>